# new_srm

./: AGENTS.md  README.md
SRM/: build.gradle
SRM/src/main/resources/: application.yml  application.yml~  (+1 more)
back-end/ai_agent/: .env.example  README.md  pyproject.toml
back-end/ai_agent/ai_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
back-end/ai_agent/app/: dependencies.py  main.py
back-end/ai_agent/app/api/: __init__.py
back-end/ai_agent/app/core/: config.py
back-end/ai_agent/app/models/: __init__.py
back-end/ai_agent/app/services/: data_service.py  knowledge_service.py  llm_service.py
back-end/ai_agent/dev_tools/: chroma_ingest.py  send_options.py
back-end/ai_agent/docs/: basic.txt
back-end/ai_agent/tests/: __init__.py  test_chat.py
back-end/srm/: Dockerfile  build.gradle  settings.gradle  srm-auth.err
back-end/srm/srm-api/: Dockerfile  build.gradle
back-end/srm/srm-auth/: build.gradle
back-end/srm/srm-bff/: build.gradle
back-end/srm/srm-common/: build.gradle
back-end/srm/srm-domain/: build.gradle
back-end/srm/srm-persistence/: build.gradle
back-end/srm/srm-scheduler/: build.gradle
front-end/srm-front-end/: .env.example  Dockerfile  README.md  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
front-end/srm-front-end/src/: App.vue  main.ts
infra/app/: docker-compose.yml
infra/cicd/: .env  docker-compose.yml
infra/db/: .env.example  docker-compose.yml
srm-front-end/: index.html  package-lock.json  package.json  vite.config.ts
srm-front-end/src/: App.scss  App.tsx  main.tsx
(+112 files in other folders)
