[project]
name = "ai-agent-backend"
version = "0.1.0"
description = "AI agent backend that proxies OpenAI chat completions and enterprise data APIs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "SRM Team" }
]
license = { text = "Proprietary" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "openai>=1.51.0",
  "pydantic-settings>=2.3.3",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.7",
  "httpx[http2]>=0.27.0",
  "anyio>=4.4.0",
  "faker>=26.0.0"
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

